--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,10 +17,10 @@
   justify-content: flex-start;
   column-gap: 32px;
   text-align: center;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
+  font-style: bold;
+  font-weight: 800;
   line-height: 1.5;
 }
 
