--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -2,6 +2,14 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -27,12 +35,12 @@ html {
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 button {
   color: var(--White);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
